<resources>
    <string name="app_name">QuickCash</string>
    <string name="welcome_title">Welcome to Quick Cash</string>
    <string name="loading_title">Loading.....</string>

    <string name="accountLabel">Create your account</string>
    <string name="emailLabel">Email</string>
    <string name="passwordLabel">Password</string>
    <string name="vPasswordLabel">Verify Password</string>
    <string name="fNameLabel">First Name</string>
    <string name="lNameLabel">Last Name</string>
    <string name="phoneLabel">Phone Number</string>
    <string name="userTypeLabel">User Type</string>
    <string name="signUpLabel">Sign up</string>
    <string name="signInLabel">Sign In</string>
    <string name="registeredLabel">Already registered?</string>
    <string-array name="userType">
        <item>Employee</item>
        <item>Employer</item>
    </string-array>

    <string name="loginLogin">Login</string>
    <string name="accountLogin">Enter your account</string>
    <string name="passwordLogin">Enter you password</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin2">Password</string>
    <string name="signupLogin">Do not have an account?</string>

    <string name="logout_label">LOGOUT</string>
    <string name="employer_label">WELCOME EMPLOYER</string>
    <string name="employee_label">WELCOME EMPLOYEE</string>

    <string name="job_label">Job\'s Details:</string>
    <string name="titleHint">Title</string>
    <string name="job_description_Hint">Job Description</string>
    <string name="pick_date_Hint">Pick Date</string>
    <string name="dateBtnLabel">DATE</string>
    <string name="pick_time_Hint">Pick Time</string>
    <string name="timeBtnLabel">TIME</string>
    <string name="hours_required_Hint">Hours Required</string>
    <string name="salaryHint">Salary</string>
    <string name="urgentLabel">URGENT</string>
    <string name="tagsHint">Tags</string>
    <string name="Tags_Instructions_Label">Separate tags using (,) - CS,Manual,Heavy Lifting, …</string>
    <string name="cancelBtn">Cancel</string>
    <string name="post_offering_Btn_Label">Post Offering</string>
    <string name="locationLabel">Location:</string>
    <string name="refresh_map_Btn">Refresh Map</string>

    <string name="view_jobs_label">View Jobs</string>
    <string name="applyLabel">Apply</string>
    <string name="view_applicant_Label">View Applicants</string>
    <string name="delete_job_application_Label">Delete Job Application</string>
    <string name="create_new_job_label">Create new Job</string>
    <string name="view_postings_label">View Postings</string>
    <string name="view_applications_label">VIEW APPLICATIONS</string>
    <string name="preferences_label">Preferences</string>
    <string name="preferable_filling_label">Preferences parameters</string>
    <string name="prefer_job_label">Prefer job</string>
    <string name="minimal_salary_label">Minimal Salary</string>
    <string name="starting_hour_label">Starting Hour(eg: 18:00)</string>
    <string name="prefer_duration_hr_label">Prefer duration (Hr)</string>
    <string name="cancel_label">Cancel</string>
    <string name="proceed_label">proceed</string>
    <string name="maximum_distance_km_label">Maximum Distance (KM)</string>
    <string name="load_preference_label">Load Preference</string>
    <string name="search_job_label">search job</string>
    <string name="default_distance_label">Default distance - 15 KM</string>
    <string name="view_job_location_label">View job location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="job_location_label">Job1 location</string>
    <string name="distance_map_label">Distance: 5KM</string>
    <string name="return_button_label">Return</string>
    <string name="pay_employee_Label">Pay</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="back">Back</string>

    <string name="ratingTitle">Please rate this person</string>
    <string name="ratingPoints">Rating Points</string>
    <string name="submit">submit</string>
    <string name="personname">PersonName</string>
    <string name="you_are_giving">You are giving</string>
    <string name="point_s">Point(s)</string>
    <string name="give_feedback">Give feedback</string>
    <string-array name="ratingNum">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="view_jobs_map_label">View Jobs Map</string>
    <string name="job_search_radius">Search Job within Radius:</string>
    <string name="search_distance_in_km">Distance(in Km)</string>
    <string name="go_Button">Go</string>
    <string name="no_rating">no rating</string>

</resources>