<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".jobmanagement.JobActivity">

    <TextView
        android:id="@+id/jobCreationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/job_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TitleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/titleHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobCreationLabel"
        android:autofillHints="Job title" />

    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="209dp"
        android:layout_height="88dp"
        android:layout_marginTop="6dp"
        android:autofillHints="Job description"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/job_description_Hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleInput"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/pick_date_Hint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/dateBtnLabel"
        app:layout_constraintStart_toEndOf="@+id/dateLabel"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInput" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="center|start"
        android:hint="@string/pick_time_Hint"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateLabel"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/timeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/timeBtnLabel"
        app:layout_constraintStart_toEndOf="@+id/timeLabel"
        app:layout_constraintTop_toBottomOf="@+id/dateBtn" />

    <EditText
        android:id="@+id/durationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:autofillHints="Hours required for job"
        android:ems="10"
        android:hint="@string/hours_required_Hint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/salaryInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/salaryHint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationInput"
        android:autofillHints="Total salary" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/urgentInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:minHeight="48dp"
        android:text="@string/urgentLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salaryInput" />

    <EditText
        android:id="@+id/tagsInput"
        android:layout_width="212dp"
        android:layout_height="88dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/tagsHint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urgentInput"
        android:autofillHints="Job tags, separate using ," />

    <TextView
        android:id="@+id/tagsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/Tags_Instructions_Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tagsInput" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/postBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/post_offering_Btn_Label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>